examples/k8stest/conf/EdgionTls/cipher/Gateway.yaml
# TLS Cipher  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cipher-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    # Legacy cipher  - TLS 1.2 + 
    - name: https-legacy
      protocol: HTTPS
      port: 31195
    # Modern cipher  - TLS 1.2 + 
    - name: https-modern
      protocol: HTTPS
      port: 31196
