examples/k8stest/conf/EdgionTls/cipher/HTTPRoute.yaml
# TLS Cipher  HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cipher-route
  namespace: edgion-test
spec:
  parentRefs:
    - name: cipher-gateway
      namespace: edgion-test
  hostnames:
    - cipher-legacy.example.com
    - cipher-modern.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
